--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^9.0.2",
