--- a/backend/image/pom.xml
+++ b/backend/image/pom.xml
@@ -65,6 +65,11 @@
             <version>4.1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.1.13</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>image</finalName>
