--- a/backend/image/pom.xml
+++ b/backend/image/pom.xml
@@ -21,6 +21,12 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.meilisearch.sdk</groupId>
+            <artifactId>meilisearch-java</artifactId>
+            <version>0.14.2</version>
+            <type>pom</type>    
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
