--- a/backend/image/src/main/resources/application.yml
+++ b/backend/image/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
       enabled: true
       max-file-size: 10MB
       max-request-size: 10MB
+  web:
+    resources:
+      static-locations: file:image/src/main/resources/static/
 
   jpa:
     hibernate:
@@ -45,3 +48,4 @@ eureka:
 server:
   port:
     8010
+
